--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
-    background: lightyellow;
-    font: 18px Arial, sans-serif;
+    background: #87ceeb;
 }
 h1 {
-    color: orange;
+    color: lightyellow;
 }
