--- a/style.css
+++ b/style.css
@@ -1,6 +1,24 @@
-body {
-    background: #87ceeb;
+table,tr,td{
+background-color: LightGoldenRodYellow ;
+font-family: century gothic;
+color: green;
+border: 1px solid aqua;
+padding: 5px;
+border-collapse: collapse;
 }
-h1 {
-    color: lightyellow;
+.h{
+border: 8px groove yellow;
+padding: 20px;
 }
+.posisi{
+position: absolute;
+margin-left: auto;
+margin-right: auto;
+margin-bottom: auto;
+margin-top: auto;
+left: 0;
+right: 0;
+top: 100px;
+bottom: 0;
+}
+
